--- a/tracker/package.xml
+++ b/tracker/package.xml
@@ -41,7 +41,10 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>ar_track_alvar</build_depend>
+  <build_depend>pcl_ros</build_depend>
+
   <run_depend>ar_track_alvar</run_depend>
+  <run_depend>pcl_ros</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
