--- a/mlr_visualization/CMakeLists.txt
+++ b/mlr_visualization/CMakeLists.txt
@@ -1,13 +1,11 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(tracker)
+project(mlr_visualization)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   ar_track_alvar
-  pcl_ros
-  OpenCV
 )
 
 ## System dependencies are found with CMake's conventions
@@ -81,8 +79,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-#  LIBRARIES tracker
-  CATKIN_DEPENDS ar_track_alvar pcl_ros
+#  LIBRARIES visualization
+  CATKIN_DEPENDS ar_track_alvar
 #  DEPENDS system_lib
 )
 
@@ -95,26 +93,23 @@ catkin_package(
 include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
-  ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a cpp library
-# add_library(tracker
-#   src/${PROJECT_NAME}/tracker.cpp
-# 
+# add_library(visualization
+#   src/${PROJECT_NAME}/visualization.cpp
 # )
 
 ## Declare a cpp executable
-add_executable(lucas_kanade_tracker src/lucas_kanade_tracker.cpp)
+add_executable(trajectory_visualization_node src/trajectory_visualization_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(tracker_node tracker_generate_messages_cpp)
+# add_dependencies(visualization_node visualization_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(lucas_kanade_tracker
+target_link_libraries(trajectory_visualization_node
    ${catkin_LIBRARIES}
-#   ${OpenCV_LIBRARIES}
 )
 
 #############
@@ -132,7 +127,7 @@ target_link_libraries(lucas_kanade_tracker
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS tracker tracker_node
+# install(TARGETS visualization visualization_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -157,7 +152,7 @@ target_link_libraries(lucas_kanade_tracker
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_tracker.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_visualization.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
