--- a/mlr_clustering/package.xml
+++ b/mlr_clustering/package.xml
@@ -40,7 +40,11 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>mlr_msgs</build_depend>
+  <run_depend>mlr_msgs</run_depend>
 
+  <build_depend>mlr_common</build_depend>
+  <run_depend>mlr_common</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
