have a weird building behaviour

--- a/mlr_clustering/CMakeLists.txt
+++ b/mlr_clustering/CMakeLists.txt
@@ -5,6 +5,8 @@ project(mlr_clustering)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  cmake_modules
   mlr_msgs
   mlr_common
   cv_bridge)
