--- a/mlr_visualization/CMakeLists.txt
+++ b/mlr_visualization/CMakeLists.txt
@@ -5,6 +5,7 @@ project(mlr_visualization)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  mlr_msgs
   ar_track_alvar
 )
 
