--- a/mlr_visualization/package.xml
+++ b/mlr_visualization/package.xml
@@ -40,6 +40,8 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>mlr_msgs</build_depend>
+
   <build_depend>ar_track_alvar</build_depend>
   <run_depend>ar_track_alvar</run_depend>
 
