--- a/mlr_clustering/package.xml
+++ b/mlr_clustering/package.xml
@@ -49,6 +49,9 @@
   <build_depend>mlr_common</build_depend>
   <run_depend>mlr_common</run_depend>
 
+  <build_depend>dynamic_reconfigure</build_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
