updated kernel function and visualization

--- a/mlr_msgs/CMakeLists.txt
+++ b/mlr_msgs/CMakeLists.txt
@@ -53,6 +53,7 @@ add_message_files(
     TrajectoryPoseUpdate.msg
     TrajectoryPoseUpdateArray.msg
     KernelState.msg
+    ObjectIds.msg
 )
 
 ## Generate services in the 'srv' folder
