--- a/mlr_visualization/CMakeLists.txt
+++ b/mlr_visualization/CMakeLists.txt
@@ -79,7 +79,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
+#  INCLUDE_DIRS include
 #  LIBRARIES visualization
   CATKIN_DEPENDS ar_track_alvar
 #  DEPENDS system_lib
@@ -91,8 +91,9 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include_directories(include)
+#include_directories(include)
 include_directories(
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
