--- a/mlr_clustering/package.xml
+++ b/mlr_clustering/package.xml
@@ -41,18 +41,13 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cmake_modules</build_depend>
-  <run_depend>cmake_modules</run_depend>
-
+  <build_depend>cv_bridge</build_depend>
   <build_depend>mlr_msgs</build_depend>
-  <run_depend>mlr_msgs</run_depend>
-
   <build_depend>mlr_common</build_depend>
-  <run_depend>mlr_common</run_depend>
-
   <build_depend>dynamic_reconfigure</build_depend>
   <run_depend>dynamic_reconfigure</run_depend>
+  <build_depend>roscpp</build_depend>
 
-  <build_depend>std_msgs</build_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
