--- a/mlr_tracking/package.xml
+++ b/mlr_tracking/package.xml
@@ -40,13 +40,14 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>ar_track_alvar</build_depend>
-  <build_depend>pcl_ros</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>image_transport</build_depend>
   <build_depend>mlr_msgs</build_depend>
+  <build_depend>pcl_ros</build_depend>
+  <!--build_depend>ar_track_alvar</build_depend-->
+  <!--run_depend>ar_track_alvar</run_depend-->
 
-  <run_depend>ar_track_alvar</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>mlr_msgs</run_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
