--- a/mlr_simulation/yaml/horizontal_4x.yaml
+++ b/mlr_simulation/yaml/horizontal_4x.yaml
@@ -1,22 +1,16 @@
-#objects : # list of objects to draw, background noise is also an object
-#  -
-#    pos: [[x0,y0],[x1,y1]] # key positions of the trajectory (specify at least 2 here)
-#    dim: [dx,dy] # dimensions of the object, specifies the initial measurement distribution
-#                 # default: [.05,.05]
-#    n: n # number of measurement points, default: 8
-#    noise: sigma # tracker noise, applied in each frame, default: .001
 
-objects:
+entities:
   - # background
-    pos: [[.5,.5],[.5,.5]]
-    dim: [.45,.45]
+    pos: [[0,0],[0,0]]
+    ext_high: [.95,.95]
+    ext_low: [.05,.05]
     n: 50
     noise: .0005
   -
     pos: [[.1,.2],[.3,.2],[.5,.2],[.7,.2],[.9,.2],[.9,.2],[.9,.2],[.9,.2]]
-    dim: [.05,.05] #this is also the default value, we won't mention it anymore
+    ext_high: [.05,.05]
     n: 20
-    noise: .001 #this is also the default value, we won't mention it anymore
+    noise: .001
   -
     pos: [[.1,.4],[.1,.4],[.3,.4],[.5,.4],[.7,.4],[.9,.4],[.9,.4],[.9,.4]]
     n: 10
@@ -30,6 +24,4 @@ objects:
 
 world:
   duration: 16 # duration for the specified trajectories in seconds
-  resolution: [640,480] # image resolution the above dimensions are scaled to
-                        # default: [640,480]
-  #suppress_points: True
+  resolution: [640,640]
