--- a/mlr_simulation/yaml/horizontal_4x.yaml
+++ b/mlr_simulation/yaml/horizontal_4x.yaml
@@ -2,23 +2,30 @@
 entities:
   - # background
     pos: [[0,0],[0,0]]
-    ext_high: [.95,.95]
-    ext_low: [.05,.05]
+    ext_high: [.99,.99]
+    ext_low: [.01,.01]
     n: 50
     noise: .0005
   -
     pos: [[.1,.2],[.3,.2],[.5,.2],[.7,.2],[.9,.2],[.9,.2],[.9,.2],[.9,.2]]
     ext_high: [.05,.05]
+    ext_low: [-0.05,-0.05]
     n: 20
     noise: .001
   -
     pos: [[.1,.4],[.1,.4],[.3,.4],[.5,.4],[.7,.4],[.9,.4],[.9,.4],[.9,.4]]
+    ext_high: [.05,.05]
+    ext_low: [-0.05,-0.05]
     n: 10
   -
     pos: [[.1,.6],[.1,.6],[.1,.6],[.3,.6],[.5,.6],[.7,.6],[.9,.6],[.9,.6]]
+    ext_high: [.05,.05]
+    ext_low: [-0.05,-0.05]
     n: 5
   -
     pos: [[.1,.8],[.1,.8],[.1,.8],[.1,.8],[.3,.8],[.5,.8],[.7,.8],[.9,.8]]
+    ext_high: [.05,.05]
+    ext_low: [-0.05,-0.05]
     n: 1
 
 
