--- a/mlr_simulation/yaml/door_and_crazy_robot.yaml
+++ b/mlr_simulation/yaml/door_and_crazy_robot.yaml
@@ -5,9 +5,10 @@ entities:
     ext_low: [.01,.01]
     ext_high: [.99,.99]
     n: 20
-    noise: .0005
-    birth: 0.2
-    death: 0.2
+    noise: .005
+    birth: 0.0
+    death: 0.0
+    init_rate: 60
   - 
     pos: [[.8,.5],[.2,.5]]
     angle: [0,2*pi,0,2*pi]
@@ -16,20 +17,23 @@ entities:
     ext_low: [-0.08,-0.08]
     ext_high: [.08,.08]
     n: 10
-    noise: .001
-    birth: 0.2
-    death: 0.2
+    noise: .005
+    birth: 0.0
+    death: 0.0
+    init_rate: 60
   - 
     pos: [[.6,.2],[.6,.2]]
     angle: [pi/2.,pi]
     mp_angle: "sin"
-    ext_low: [0,0]
+    ext_low: [.1,0]
     ext_high: [.5,.03]
     n: 10
     noise: .001
-    birth: 0.2
-    death: 0.2
+    birth: 0.0
+    death: 0.0
+    init_rate: 60
     
 world:
   duration: 10
+  terminate: False
   resolution: [640,640]
