--- a/mlr_simulation/yaml/split_2x.yaml
+++ b/mlr_simulation/yaml/split_2x.yaml
@@ -3,24 +3,25 @@ entities:
     pos: [[.05,.05],[.05,.05]]
     ext_high: [.9,.9]
     n: 20
-    noise: .001
+    noise: .01
     birth: .0
     death: .0
   -
     pos: [[.2,.6],[.5,.6],[.8,.8]]
     ext_high: [.1,.1]
     n: 5
-    noise: .001
+    noise: .01
     birth: .0
     death: .0
   -
     pos: [[.2,.4],[.5,.4],[.8,.2]]
     ext_high: [.1,.1]
     n: 5
-    noise: .001
+    noise: .01
     birth: .0
     death: .0
 
 world:
   duration: 10
+  terminate: True
   resolution: [640,640]
